--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -59,7 +59,7 @@
           <form action="" class="form">
 
             <div class="form-field">
-              <input type="text" name="name" id="name" placeholder="fgfggfffff" class="form-input" />
+              <input type="text" name="name" id="name" placeholder=" " class="form-input" />
               <label for="name" class="form-label">Имя</label>
               <svg width="18" height="18" class="icon-form">
                 <use href="./images/sprite.svg#icon-person-black"></use>
